# credit_card_fraud_detection

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  dataset.py  main.py  model.py  predict.py  settings.py  test.py  train.py
